--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.appsdeveloperblog.app.verification</groupId>
   <artifactId>verification-service</artifactId>
-  <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   <name>verification-service Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -16,6 +16,13 @@
     </dependency>
   </dependencies>
   <build>
+    <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.3.1</version>
+    </plugin>
+  </plugins>
     <finalName>verification-service</finalName>
   </build>
 </project>
